# beatcoach

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  config.example.yaml  index.html  pyproject.toml
examples/: advanced.py  basic.py
src/: __main__.py  core.py  health.py  utils.py
src/beatcoach/: __init__.py  cli.py  models.py  report.py
src/beatcoach/analyzer/: __init__.py  pitch.py  rhythm.py  tuner.py
src/beatcoach/practice/: __init__.py  exercises.py  metronome.py  scorer.py
tests/: test_benchmark.py  test_core.py  test_exercises.py  test_integration.py  test_metronome.py  test_models.py  test_pitch.py  test_rhythm.py  test_scorer.py  test_tuner.py
